fix(Header): do not allow linebreak in user name

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -21,6 +21,7 @@
       font-size: 15px;
       color: $grey-lighten-56;
       font-weight: 500;
+      white-space: nowrap;
     }
   }
 
